fix whitespace and height chat contianer

--- a/src/css/7-scopes/scopes.chat.scss
+++ b/src/css/7-scopes/scopes.chat.scss
@@ -5,7 +5,8 @@
 
 .s-chat__messages {
   overflow-y: auto;
-  max-height: calc(100vh - 70px);
+  max-height: calc(100vh - 145px);
+  margin-top: 75px;
 }
 
 .s-chat__input {
